Pin the submission list fields the client reads
Assert on the raw JSON of the test-run, import and complaint list
endpoints: correctionRound, participation id and type, the test case
counters, sibling rated and score, the modeling model, and the
complained result among the listed results with its assessment type.